--- a/projects/notedown-parser/tests/text_mode/test.html
+++ b/projects/notedown-parser/tests/text_mode/test.html
@@ -1,1 +1,1 @@
-<article><h1>测试集<b>1</b></h1><h2>验证集<i>2</i></h2><p>-ab</p></article>
+<article><h1>Test titles</h1><h2>Title Level 2</h2><h3>Title Level 3</h3><h4>Title Level 4</h4><h5>Title Level 5</h5><h6>Title Level 6</h6><h1>Test styles</h1><p>test <i>italic</i></p><p>test <b>bold</b></p><p>test </p></article>
