Fix long inline code capture

--- a/projects/notedown-parser/tests/text_mode/test.html
+++ b/projects/notedown-parser/tests/text_mode/test.html
@@ -1,1 +1,1 @@
-<article><h1>Test titles</h1><h2>Title Level 2</h2><h3>Title Level 3</h3><h4>Title Level 4</h4><h5>Title Level 5</h5><h6>Title Level 6</h6><h1>Test styles</h1><p>test <i>italic</i></p><p>test <b>bold</b></p><p>test </p></article>
+<article><h2>Test titles</h2><h3>Title Level 2</h3><h4>Title Level 3</h4><h5>Title Level 4</h5><h6>Title Level 5</h6><h6>Title Level 6</h6><h6>Title Level 7</h6><h2>Test escapes</h2><p>a </p></article>
